--- a/_resource/translations/ru/donors.txt
+++ b/_resource/translations/ru/donors.txt
@@ -1,20 +1,37 @@
-Many thanks to those who have been kind enough to donate in support of this project:[return][return]
+Translations:[return][return]
+Wolfgang Baird - English[return][return]
+Donors:[return][return]
 4LE Media, L.L.C.[return]
-Anonymous x1[return]
+Ang Edwin[return]
+Anonymous[return]
 Anthony Giusti[return]
+Aron Yoffe[return]
+Barry Chiarello[return]
 Barton Poulson[return]
+Blair Chivers[return]
 Bree Lassen[return]
 Brian Sweeney[return]
 Carles Escudero Diaz[return]
+Cat N Co[return]
+Charlie Lembach[return]
 Chen Yap[return]
 Christine Billings[return]
+Christopher Focer[return]
+Chuck Freiman[return]
+Chuck Freiman[return]
+Cihan Deribas[return]
 Connie Spencer[return]
 Daniel Tullis[return]
 David Bluestone[return]
 David Hirsh[return]
-Denis Stewart[return]
+David Kaminsky[return]
+Denis Stewar[return]
 Denny Forster[return]
+Donation[return]
 Edgar Kraus[return]
+Ekvia Ltd[return]
+erick genaude[return]
+Frank Thurber[return]
 Gregory A Petsko[return]
 Gregory Pitta[return]
 Hans Henningsson[return]
@@ -22,36 +39,57 @@ Howard Dym[return]
 Howard Katz[return]
 James Powell[return]
 Jan Wade[return]
+Jay Gould[return]
 Jean-Francois Mayer[return]
-Jean-Guy Niquet[return]
+Jean-Guy Nique[return]
 Jim Elsworth[return]
 Johan Sorensson[return]
 John Knoerr[return]
 John Lustman[return]
+John McGrew[return]
 John Mueller[return]
+John Parr[return]
 Julie Lindsey-Halls[return]
 Justin Dailey[return]
-Kennett Sargent[return]
+Ken Hoyle[return]
+Kennett Sargen[return]
 Lei Feng[return]
 Leslie Layton[return]
 Li Lu[return]
 Liam o'sullivan[return]
 Liu Chun Yin Arthur[return]
 Lorne Hobbs[return]
+Marc Laurendeau[return]
+Mark Gonzales[return]
+Mark Warren[return]
 Marten Claridge[return]
 Michael Fontana[return]
+Mike Bessy[return]
 Niels van Kruiningen[return]
 Niyi Afelumo[return]
+Noelle De Guzman[return]
+Paul Babadi Bamba[return]
+Pete Askew[return]
+peter faiman[return]
 Petr Smrz[return]
-Richard Tolbert[return]
+Rainer Kühnel[return]
+Richard Nolan[return]
+Richard Tolber[return]
+Robert B. Bass[return]
 Robert Bailey[return]
 Robert Nace[return]
 Ross Green[return]
 Ryoichi Morita[return]
+Samir Benmammar[return]
+Sean Greenwood[return]
 Tata Parker[return]
+Thai Tran[return]
 Trang Tran[return]
+Ulvi Kerimli[return]
 Vera Rankins[return]
 Warren Avny[return]
 William Griffith[return]
+William M Sorem[return]
+Winston Maxwell[return]
 Wolbe, Inc.[return]
-吳 駿維
+吳 駿維[return]
