--- a/_resource/translations/ru/welcome.txt
+++ b/_resource/translations/ru/welcome.txt
@@ -1,6 +1,6 @@
 *.transparency = 1
 *.floating = 1
-*.title = Welcome to cDock
+*.title = Добро пожаловать в cDock
 *.autosavekey = cDock Welcome
 
 img.type = image
@@ -11,7 +11,7 @@ img.y = 235
 	
 # Introductory text
 welcomet0.type = text
-welcomet0.default = cDock is an application for customizing your dock on OSX Mavericks and Yosemite. Thanks for using cDock![return][return]Programming & Design : Wolfgang Baird
+welcomet0.default = Приложение cDock предназначено для настройки панели Dock в операционных системах OSX Mavericks и Yosemite. Благодарим за использование cDock! Программирование и дизайн: Wolfgang Baird
 welcomet0.width = 350
 welcomet0.x = 80
 welcomet0.y = 240
@@ -25,4 +25,4 @@ welcometb0.y = 30
 
 # Accept button
 welcomedb.type = defaultbutton
-welcomedb.label = Continue
+welcomedb.label = Продолжить
