--- a/_resource/translations/it/donors.txt
+++ b/_resource/translations/it/donors.txt
@@ -4,6 +4,7 @@ Dmitry Kudryashov - Russian, Chinese (Simplified)[return]
 Mauro Ferreri - Italian[return][return]
 Donors:[return][return]
 4LE Media, L.L.C.[return]
+Andrew Howse[return]
 Ang Edwin[return]
 Anonymous[return]
 Anthony Giusti[return]
@@ -30,15 +31,24 @@ David Kaminsky[return]
 Denis Stewar[return]
 Denny Forster[return]
 Donation[return]
+Dr Joel J Levitz[return]
+Edgar Braun[return]
 Edgar Kraus[return]
+Edmund L Windeler Jr[return]
 Ekvia Ltd[return]
-erick genaude[return]
+Eric Ackerman[return]
 Frank Thurber[return]
+Gary T Fields[return]
 Gregory A Petsko[return]
 Gregory Pitta[return]
 Hans Henningsson[return]
+Harvey Rubinstein[return]
+Haydon Enterprises[return]
 Howard Dym[return]
 Howard Katz[return]
+Ian Summers[return]
+Jacqueline Lawson[return]
+James Barley[return]
 James Powell[return]
 Jan Wade[return]
 Jay Gould[return]
@@ -51,6 +61,7 @@ John Lustman[return]
 John McGrew[return]
 John Mueller[return]
 John Parr[return]
+John Scott[return]
 Julie Lindsey-Halls[return]
 Justin Dailey[return]
 Ken Hoyle[return]
@@ -67,12 +78,13 @@ Mark Warren[return]
 Marten Claridge[return]
 Michael Fontana[return]
 Mike Bessy[return]
+Neil Pomeroy[return]
 Niels van Kruiningen[return]
 Niyi Afelumo[return]
 Noelle De Guzman[return]
+Othmar Vetrovetz[return]
 Paul Babadi Bamba[return]
 Pete Askew[return]
-peter faiman[return]
 Petr Smrz[return]
 Rainer Kühnel[return]
 Richard Nolan[return]
@@ -82,8 +94,10 @@ Robert Bailey[return]
 Robert Nace[return]
 Ross Green[return]
 Ryoichi Morita[return]
+Sabine Zimmermann[return]
 Samir Benmammar[return]
 Sean Greenwood[return]
+Stefano Brocco[return]
 Tata Parker[return]
 Thai Tran[return]
 Trang Tran[return]
@@ -94,4 +108,8 @@ William Griffith[return]
 William M Sorem[return]
 Winston Maxwell[return]
 Wolbe, Inc.[return]
+erick genaude[return]
+michael kreiser[return]
+p.r. austin unlimited visions[return]
+peter faiman[return]
 吳 駿維[return]
