--- a/_resource/translations/it/donors.txt
+++ b/_resource/translations/it/donors.txt
@@ -6,13 +6,12 @@ Donors:[return][return]
 4LE Media, L.L.C.[return]
 Andrew Howse[return]
 Ang Edwin[return]
-Anonymous[return]
+Anonymous x2[return]
 Anthony Giusti[return]
 Aron Yoffe[return]
 Barry Chiarello[return]
 Barton Poulson[return]
 Blair Chivers[return]
-Bree Lassen[return]
 Brian Sweeney[return]
 Carles Escudero Diaz[return]
 Cat N Co[return]
