--- a/_resource/translations/it/donors.txt
+++ b/_resource/translations/it/donors.txt
@@ -4,14 +4,14 @@ Dmitry Kudryashov - Russian, Chinese (Simplified)[return]
 Mauro Ferreri - Italian[return][return]
 Donors:[return][return]
 4LE Media, L.L.C.[return]
-Andrew Howse[return]
 Ang Edwin[return]
-Anonymous x2[return]
+Anonymous[return]
 Anthony Giusti[return]
 Aron Yoffe[return]
 Barry Chiarello[return]
 Barton Poulson[return]
 Blair Chivers[return]
+Bree Lassen[return]
 Brian Sweeney[return]
 Carles Escudero Diaz[return]
 Cat N Co[return]
@@ -30,24 +30,15 @@ David Kaminsky[return]
 Denis Stewar[return]
 Denny Forster[return]
 Donation[return]
-Dr Joel J Levitz[return]
-Edgar Braun[return]
 Edgar Kraus[return]
-Edmund L Windeler Jr[return]
 Ekvia Ltd[return]
-Eric Ackerman[return]
+erick genaude[return]
 Frank Thurber[return]
-Gary T Fields[return]
 Gregory A Petsko[return]
 Gregory Pitta[return]
 Hans Henningsson[return]
-Harvey Rubinstein[return]
-Haydon Enterprises[return]
 Howard Dym[return]
 Howard Katz[return]
-Ian Summers[return]
-Jacqueline Lawson[return]
-James Barley[return]
 James Powell[return]
 Jan Wade[return]
 Jay Gould[return]
@@ -60,7 +51,6 @@ John Lustman[return]
 John McGrew[return]
 John Mueller[return]
 John Parr[return]
-John Scott[return]
 Julie Lindsey-Halls[return]
 Justin Dailey[return]
 Ken Hoyle[return]
@@ -77,13 +67,12 @@ Mark Warren[return]
 Marten Claridge[return]
 Michael Fontana[return]
 Mike Bessy[return]
-Neil Pomeroy[return]
 Niels van Kruiningen[return]
 Niyi Afelumo[return]
 Noelle De Guzman[return]
-Othmar Vetrovetz[return]
 Paul Babadi Bamba[return]
 Pete Askew[return]
+peter faiman[return]
 Petr Smrz[return]
 Rainer Kühnel[return]
 Richard Nolan[return]
@@ -93,10 +82,8 @@ Robert Bailey[return]
 Robert Nace[return]
 Ross Green[return]
 Ryoichi Morita[return]
-Sabine Zimmermann[return]
 Samir Benmammar[return]
 Sean Greenwood[return]
-Stefano Brocco[return]
 Tata Parker[return]
 Thai Tran[return]
 Trang Tran[return]
@@ -107,8 +94,4 @@ William Griffith[return]
 William M Sorem[return]
 Winston Maxwell[return]
 Wolbe, Inc.[return]
-erick genaude[return]
-michael kreiser[return]
-p.r. austin unlimited visions[return]
-peter faiman[return]
 吳 駿維[return]
