--- a/_resource/translations/it/donors.txt
+++ b/_resource/translations/it/donors.txt
@@ -4,25 +4,30 @@ Dmitry Kudryashov - Russian, Chinese (Simplified)[return]
 Mauro Ferreri - Italian[return][return]
 Donors:[return][return]
 4LE Media, L.L.C.[return]
+Andrew Howse[return]
 Ang Edwin[return]
-Anonymous[return]
+Anonymous x2[return]
+Anoop Chauhan[return]
 Anthony Giusti[return]
 Aron Yoffe[return]
 Barry Chiarello[return]
 Barton Poulson[return]
 Blair Chivers[return]
-Bree Lassen[return]
 Brian Sweeney[return]
 Carles Escudero Diaz[return]
 Cat N Co[return]
+Charles McKenna[return]
 Charlie Lembach[return]
 Chen Yap[return]
 Christine Billings[return]
+Christoph Bickenbach[return]
 Christopher Focer[return]
 Chuck Freiman[return]
 Chuck Freiman[return]
 Cihan Deribas[return]
 Connie Spencer[return]
+Curtis Jackson[return]
+Daniel Katz[return]
 Daniel Tullis[return]
 David Bluestone[return]
 David Hirsh[return]
@@ -30,20 +35,33 @@ David Kaminsky[return]
 Denis Stewar[return]
 Denny Forster[return]
 Donation[return]
+Dr Joel J Levitz[return]
+Dr. Ralf Mundkowski[return]
+Edgar Braun[return]
 Edgar Kraus[return]
+Edmund L Windeler Jr[return]
 Ekvia Ltd[return]
-erick genaude[return]
+Empraxis LLC[return]
+Eric Ackerman[return]
+Erick Genaude[return]
 Frank Thurber[return]
+Gary T Fields[return]
 Gregory A Petsko[return]
 Gregory Pitta[return]
 Hans Henningsson[return]
+Harvey Rubinstein[return]
+Haydon Enterprises[return]
 Howard Dym[return]
 Howard Katz[return]
+Ian Summers[return]
+Jacqueline Lawson[return]
+James Barley[return]
 James Powell[return]
 Jan Wade[return]
 Jay Gould[return]
 Jean-Francois Mayer[return]
 Jean-Guy Nique[return]
+Jean-Louis Giavitto[return]
 Jim Elsworth[return]
 Johan Sorensson[return]
 John Knoerr[return]
@@ -51,10 +69,12 @@ John Lustman[return]
 John McGrew[return]
 John Mueller[return]
 John Parr[return]
+John Scott[return]
 Julie Lindsey-Halls[return]
 Justin Dailey[return]
 Ken Hoyle[return]
 Kennett Sargen[return]
+Knapp Steven[return]
 Lei Feng[return]
 Leslie Layton[return]
 Li Lu[return]
@@ -66,26 +86,41 @@ Mark Gonzales[return]
 Mark Warren[return]
 Marten Claridge[return]
 Michael Fontana[return]
+Michael Grisolia[return]
+Michael Kreiser[return]
 Mike Bessy[return]
+Neil Pomeroy[return]
 Niels van Kruiningen[return]
 Niyi Afelumo[return]
 Noelle De Guzman[return]
+Othmar Vetrovetz[return]
+P.R. Austin unlimited visions[return]
 Paul Babadi Bamba[return]
 Pete Askew[return]
-peter faiman[return]
+Peter Faiman[return]
+Peter Slavcheff[return]
 Petr Smrz[return]
 Rainer Kühnel[return]
+Richard Irecky[return]
 Richard Nolan[return]
 Richard Tolber[return]
 Robert B. Bass[return]
 Robert Bailey[return]
 Robert Nace[return]
+Robert Poland[return]
+Ron Franks[return]
 Ross Green[return]
 Ryoichi Morita[return]
+Sabine Zimmermann[return]
 Samir Benmammar[return]
+Sanae Kikuchi[return]
 Sean Greenwood[return]
+Self-Health Education, Inc.[return]
+Stefano Brocco[return]
 Tata Parker[return]
+Terje Christiansen[return]
 Thai Tran[return]
+Tom Lloyd[return]
 Trang Tran[return]
 Ulvi Kerimli[return]
 Vera Rankins[return]
@@ -94,4 +129,5 @@ William Griffith[return]
 William M Sorem[return]
 Winston Maxwell[return]
 Wolbe, Inc.[return]
+tuesday healy[return]
 吳 駿維[return]
