--- a/_resource/translations/zh/donors.txt
+++ b/_resource/translations/zh/donors.txt
@@ -7,6 +7,7 @@ Donors:[return][return]
 Andrew Howse[return]
 Ang Edwin[return]
 Anonymous x2[return]
+Anoop Chauhan[return]
 Anthony Giusti[return]
 Aron Yoffe[return]
 Barry Chiarello[return]
@@ -15,14 +16,18 @@ Blair Chivers[return]
 Brian Sweeney[return]
 Carles Escudero Diaz[return]
 Cat N Co[return]
+Charles McKenna[return]
 Charlie Lembach[return]
 Chen Yap[return]
 Christine Billings[return]
+Christoph Bickenbach[return]
 Christopher Focer[return]
 Chuck Freiman[return]
 Chuck Freiman[return]
 Cihan Deribas[return]
 Connie Spencer[return]
+Curtis Jackson[return]
+Daniel Katz[return]
 Daniel Tullis[return]
 David Bluestone[return]
 David Hirsh[return]
@@ -31,11 +36,14 @@ Denis Stewar[return]
 Denny Forster[return]
 Donation[return]
 Dr Joel J Levitz[return]
+Dr. Ralf Mundkowski[return]
 Edgar Braun[return]
 Edgar Kraus[return]
 Edmund L Windeler Jr[return]
 Ekvia Ltd[return]
+Empraxis LLC[return]
 Eric Ackerman[return]
+Erick Genaude[return]
 Frank Thurber[return]
 Gary T Fields[return]
 Gregory A Petsko[return]
@@ -53,6 +61,7 @@ Jan Wade[return]
 Jay Gould[return]
 Jean-Francois Mayer[return]
 Jean-Guy Nique[return]
+Jean-Louis Giavitto[return]
 Jim Elsworth[return]
 Johan Sorensson[return]
 John Knoerr[return]
@@ -65,6 +74,7 @@ Julie Lindsey-Halls[return]
 Justin Dailey[return]
 Ken Hoyle[return]
 Kennett Sargen[return]
+Knapp Steven[return]
 Lei Feng[return]
 Leslie Layton[return]
 Li Lu[return]
@@ -76,29 +86,41 @@ Mark Gonzales[return]
 Mark Warren[return]
 Marten Claridge[return]
 Michael Fontana[return]
+Michael Grisolia[return]
+Michael Kreiser[return]
 Mike Bessy[return]
 Neil Pomeroy[return]
 Niels van Kruiningen[return]
 Niyi Afelumo[return]
 Noelle De Guzman[return]
 Othmar Vetrovetz[return]
+P.R. Austin unlimited visions[return]
 Paul Babadi Bamba[return]
 Pete Askew[return]
+Peter Faiman[return]
+Peter Slavcheff[return]
 Petr Smrz[return]
 Rainer Kühnel[return]
+Richard Irecky[return]
 Richard Nolan[return]
 Richard Tolber[return]
 Robert B. Bass[return]
 Robert Bailey[return]
 Robert Nace[return]
+Robert Poland[return]
+Ron Franks[return]
 Ross Green[return]
 Ryoichi Morita[return]
 Sabine Zimmermann[return]
 Samir Benmammar[return]
+Sanae Kikuchi[return]
 Sean Greenwood[return]
+Self-Health Education, Inc.[return]
 Stefano Brocco[return]
 Tata Parker[return]
+Terje Christiansen[return]
 Thai Tran[return]
+Tom Lloyd[return]
 Trang Tran[return]
 Ulvi Kerimli[return]
 Vera Rankins[return]
@@ -107,8 +129,5 @@ William Griffith[return]
 William M Sorem[return]
 Winston Maxwell[return]
 Wolbe, Inc.[return]
-erick genaude[return]
-michael kreiser[return]
-p.r. austin unlimited visions[return]
-peter faiman[return]
+tuesday healy[return]
 吳 駿維[return]
